--- a/test work/style.css
+++ b/test work/style.css
@@ -1,5 +1,6 @@
 html {
   font-size: 62.5%;
+  font-family: sans-serif;
 }
 
 * {
@@ -23,6 +24,13 @@ header {
   height: 3rem;
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 380px ) {
+    .login-btn {
+   display: none; 
+   opacity: 0;
+  }
 }
 .header__icon {
   height: 1.5rem;
@@ -71,13 +79,22 @@ header > nav > a {
 
 main {
   background-color: skyblue;
+  position: relative;
 }
 
 .banner {
   display: flex;
   height: 30rem;
-  align-items: stretch;
+  /* align-items: stretch; */
   justify-content: flex-start;
+}
+
+@media (max-width: 380px) {
+  .banner{
+    flex-direction: column;
+height: 60rem;
+position: relative;
+  }
 }
 
 .banner > aside {
@@ -145,6 +162,12 @@ p {
 .product__item {
   display: flex;
   gap: 3rem;
+}
+
+@media (max-width: 380px) {
+  .product__item {
+    flex-direction: column;
+  }
 }
 .product__item_value {
   display: flex;
@@ -234,3 +257,138 @@ p {
   align-self: center;
   margin-bottom: 0.3rem;
 }
+
+/* our plans section */
+.our-plans {
+  display: flex;
+  height: 30rem;
+  align-items: stretch;
+  justify-content: flex-start;
+}
+
+.our-plans > aside:nth-child(1) {
+  width: 40%;
+}
+.our-plans > aside:nth-child(2) {
+  flex: 1;
+}
+.our-plans > .our-plans__second {
+  background-image: url("images/hearts.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.our-plans__price-tag {
+  height: 165px;
+  width: 109px;
+  background-color: rgb(69, 70, 89);
+  margin-top: 75px;
+  padding-top: 18px;
+  padding-bottom: 15px;
+  padding-left:11px;
+  padding-right: 11px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.our-plans__price-tag > header {
+  flex-direction: column;
+  justify-content: space-between;
+  
+}
+
+.our-plans__price-tag > header > h3 {
+  font-size: 1.2rem;
+}
+
+.our-plans__price-tag > header > hr {
+  margin: 6px 0px;
+  height: 0px;
+  border: 0.5px solid white;
+}
+
+.our-plans__price-tag > header > p {
+  font-size: 0.7rem;
+}
+
+.our-plans__price-tag > main {
+background-color: transparent;
+font-size: 2rem;
+font-weight: 700;
+}
+
+.our-plans__price-tag > main > sup {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+
+.our-plans__price-tag > footer > a {
+ color: rgb(255, 255, 255);
+ border: 1px white solid;
+ border-radius: 1rem;
+ font-size: 0.7rem;
+ padding: 2px 10px;
+}
+
+
+.our-plans__first {
+  position: relative;
+  background-color: white;
+}
+.our-plans__first > div {
+  width: 20rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.our-plans__first > div > a {
+  display: inline-block;
+  background-color: rgb(38, 26, 26);
+  border-radius: 1rem;
+  color: white;
+  font-size: 0.8rem;
+  padding: 0.2rem 1.5rem;
+  align-self: center;
+  margin-bottom: 0.3rem;
+}
+
+
+.our-plans__second_scale{
+  transform: scale(1.2);
+  position: relative;
+}
+
+.our-plans__first_scale> div {
+  width: 20rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.our-plans__first_scale > div > a {
+  display: inline-block;
+  background-color: rgb(38, 26, 26);
+  border-radius: 1rem;
+  color: white;
+  font-size: 0.8rem;
+  padding: 0.2rem 1.5rem;
+  align-self: center;
+  margin-bottom: 0.3rem;
+}
+
+.text-carrot {
+  color: rgb(243, 163, 145)
+}
+
+
